Get typed evidences

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,5 +3,8 @@ page-home {
         display: block;
         height: 100%;
         width: 100%;
-      }
+    }
+    .flame-icon{
+        margin: 0 5px;
+    }
 }
