--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -4,4 +4,7 @@ page-report {
     height: 40vh;
     background-color: lighten( lightgrey, 15%);
     }
+    .flame-icon{
+        margin: 0 5px;
+    }
 }
