Last version Front-End

--- a/src/pages/prevent/prevent.scss
+++ b/src/pages/prevent/prevent.scss
@@ -1,3 +1,11 @@
 page-prevent {
+    .description_textarea_css textarea{
+    width: 95%t;
+    height: 40vh;
+    background-color: lighten( lightgrey, 15%);
+    }
+    .flame-icon{
+        margin: 0 5px;
+    }
 
 }
